--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+
+  <div>
+    <label for="email">email: </label>
+    <input id="email" type="email" formControlName="email">
+  </div>
+
+  <div>
+    <label for="psw">psw: </label>
+    <input id="psw" type="password" formControlName="psw">
+  </div>
+
+
+  <button type="submit" [disabled]="!loginForm.valid">Submit</button>
+</form>
